# milvus_study

./: main.py  pyproject.toml  raw_documents.json  raw_documents_bak.json  test.py  原始文档.py  最新备份.py  阿里嵌入模型.py
study/: 00 创建数据库.py  01 创建Schema 添加索引 创建集合.py  03 分区操作.py  04 别名.py  05 定义Schema.py  06 分析器.py  07 多语言分析器.py  08 区间搜索.py  09 分组搜索.py  10 混合检索.py  11 全文搜索实例.py  12 文本匹配.py  13 在全文搜索中高亮显示搜索词.py  14 在文本匹配中使用高亮搜索词.py  15 高亮显示同时应用在文本匹配和全文搜索中.py  16 短语匹配.py  17 搜索迭代器.py
混合索引/: ingest_pipeline.py  query_hybrid.py
父子索引 ColBERT/: ingest_pipeline.py  query_pipeline.py
